# Resham

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  railway.worker.toml
docs/: RAILWAY.md
extension/: README.md  build.mjs  manifest.json  microphone.html  package-lock.json  package.json  playwright.config.ts  popup.html  tsconfig.json  vitest.config.ts
extension/e2e/: popup.spec.ts
extension/src/: background.ts  config.ts  microphone.css  microphone.ts  popup.ts  styles.css  voice.ts
extension/src/content/: cart-add.ts
extension/src/shared/: contracts.ts  validators.ts
extension/src/ui/: product-card.ts
extension/tests/: product-card.test.ts  validators.test.ts  voice.test.ts
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_vision_classification.py  0003_add_text_derived_color.py  0004_add_tradition_and_formality.py  0005_seed_kids_collection.py  0006_promote_kids_corner.py  0007_seed_collection_images.py
seed/: brands.json  collections.json
src/resham/: config.py  dependencies.py  errors.py  security.py
src/resham/api/: main.py  rate_limit.py
src/resham/catalog/: backfill_cli.py  content_hash.py  freshness.py  mapper.py  product_view.py  repository.py  (+1 more)
tests/integration/: conftest.py  test_catalog_repository.py  test_search_eligibility.py
tests/property/: test_apparel_classification_properties.py  test_garment_extraction_properties.py  test_query_keywords_properties.py
tests/regression/: cases.py  test_apparel_classification_regressions.py  test_diversify_by_brand_regressions.py
web/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  railway.toml
web/src/: App.tsx  index.css  types.ts
(+137 files in other folders)
