[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resham"
version = "0.1.0"
description = "Resham: crawl-and-store product catalog with Chroma RAG search over Pakistani clothing brands"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.30.0,<0.31",
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "asyncpg>=0.29.0,<0.30",
    "alembic>=1.13.0,<1.14",
    "psycopg2-binary>=2.9,<3",
    "pydantic>=2.7.0,<3",
    "pydantic-settings>=2.3.0,<3",
    "httpx>=0.28.1,<0.29",
    "aiohttp>=3.10.0,<3.11",
    "google-genai>=2.11.0,<3",
    "groq>=1.5.0,<2",
    "redis>=5.0.1,<6",
    "apscheduler>=3.10.4,<3.11",
    "slowapi>=0.1.9,<0.2",
    "python-multipart>=0.0.9,<0.1",
    "bcrypt>=4.1.0,<5",
    "PyJWT>=2.9.0,<3",
    "email-validator>=2.2.0,<3",
    "chromadb>=0.5.23,<0.6",
    "numpy>=1.26.4,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<8",
    "pytest-asyncio>=0.21.1,<0.22",
    "pytest-cov>=4.1.0,<5",
    "respx>=0.21.1,<0.22",
    "black>=24.0.0,<25",
    "ruff>=0.4.0,<0.5",
    "mypy>=1.10.0,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=resham --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["src/resham"]
omit = ["*/tests/*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_any_unimported = false
